# ndi-streamer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  app.cpp  build.sh
lib/sdk/: INFO.TXT
sdk/: .gitignore
